[Blink, HTMLMediaElement] Fix ASSERT in ScriptPromiseResolver dtor

Don't get promise() from the resolver if it's not used.

BUG=618429
TEST=the test page from the bug.

Review-Url: https://codereview.chromium.org/2047313004
Cr-Commit-Position: refs/heads/master@{#398887}

Former-commit-id: 08c6f401940f2b255514c1380ded3c01fc9f7fa2